--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "blog.serenacodes.com/"
+baseURL = "blog.serenacodes.com"
 languageCode = "en-us"
 title = "Serena's Blog"
 theme = "hugo-PaperMod"
